--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,10 @@
     margin-top: 16px !important;
 }
 
+.mt-32{
+    margin-top: 32px !important;
+}
+
 .clear{
     clear: both;
 }
@@ -78,6 +82,8 @@
     margin-top: 15px;
     text-decoration: none;
     border: none;
+    text-align: center;
+    -webkit-appearance: none;
 
 }
 
@@ -168,6 +174,15 @@
     font-size: 14px;
 }
 
+#header .mobile-menu-btn{
+    position:absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
+
+
+#header .mobile-menu-btn,
 #header .search-btn{
     float: right;
     padding: 0 21px;
@@ -179,6 +194,15 @@
     cursor : pointer;
 }
 
+#header .mobile-menu-btn:hover{
+    background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
+}
+
+#header .mobile-menu-btn .menu-icon,
 #header .search-btn .search-icon{
     color: #fff;
     font-size: 20px;
@@ -188,7 +212,7 @@
 #slider{
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider1.jpeg') top center / cover no-repeat;
+    background: url('../img/slider1.jpeg') top center / cover no-repeat;
     position: relative;
 }
 
@@ -210,6 +234,7 @@
 #slider .text-description{
     font-size: 15px;
     margin-top: 20px;
+    text-shadow: 0 0 1px black;
 }
 
 #content{
@@ -222,8 +247,8 @@
     padding: 64px 0px 112px; 
     margin-left: auto;
     margin-right: auto;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 #content .section-heading{
@@ -249,7 +274,7 @@
 }
 
 #content .member-list{
-    margin-top: 48px;
+    margin-top: 32px;
     /* overflow:hidden; */
 }
 
@@ -308,7 +333,7 @@
 
 /* Places */
 .places-list{
-    margin-top : 32px;
+    margin-top : 16px;
 }
 
 /* .place-item{
@@ -355,7 +380,7 @@
 
 .contact-info{
     font-size: 18px;
-    line-height: 1.5px;
+    line-height: 1.75;
 }
 
 .contact-info i[class*="ti-"] {
